--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
@@ -1,104 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4273041D-E782-406A-993C-141BA7B3084D}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rogero.WpfNavigation</RootNamespace>
-    <AssemblyName>Rogero.WpfNavigation</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="Optional, Version=4.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Optional.4.0.0\lib\net45\Optional.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\Woeber.Logistics\src\Woeber.Logistics\packages\Serilog.2.10.0\lib\net46\Serilog.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AwaitExtensions.cs" />
-    <Compile Include="ExtensionMethods\OptionExtensionMethods.cs" />
-    <Compile Include="ExtensionMethods\TypeExtensions.cs" />
-    <Compile Include="ICanActivate.cs" />
-    <Compile Include="InternalLogger.cs" />
-    <Compile Include="IRouteAuthorizationManager.cs" />
-    <Compile Include="IRouteAuthorizationResult.cs" />
-    <Compile Include="IViewAware.cs" />
-    <Compile Include="RouteRequest.cs" />
-    <Compile Include="RouteWorkflow.cs" />
-    <Compile Include="RouteWorkflowTask.cs" />
-    <Compile Include="Logging.cs" />
-    <Compile Include="IRouteEntryRegistry.cs" />
-    <Compile Include="DispatcherExtensions.cs" />
-    <Compile Include="ViewportAdapters\ContentControlViewportAdapter.cs" />
-    <Compile Include="ControlViewportAdapterFactory.cs" />
-    <Compile Include="EnumerableTrees\EnumerableTreeExtensions.cs" />
-    <Compile Include="ICanDeactivate.cs" />
-    <Compile Include="ViewportAdapters\IControlViewportAdapter.cs" />
-    <Compile Include="EnumerableTrees\ILinqTree.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RouteResult.cs" />
-    <Compile Include="RouteResultStatusCode.cs" />
-    <Compile Include="RouterService.cs" />
-    <Compile Include="AttachedProperties\RoutingComponent.cs" />
-    <Compile Include="RoutingComponentsHelper.cs" />
-    <Compile Include="ViewportAdapters\PreviousWindowActiveState.cs" />
-    <Compile Include="ViewportAdapters\TabControlViewportAdapter.cs" />
-    <Compile Include="EnumerableTrees\DependencyObjectTreeExtensions.cs" />
-    <Compile Include="EnumerableTrees\VisualTreeAdapter.cs" />
-    <Compile Include="ViewportAdapters\WindowExtensions.cs" />
-    <Compile Include="ViewportNames.cs" />
-    <Compile Include="ViewportOptions.cs" />
-    <Compile Include="ViewportType.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="ClassDiagram1.cd" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+    <PropertyGroup>
+        <TargetFramework>net5.0-windows</TargetFramework>
+        <LangVersion>9</LangVersion>
+        <UseWPF>true</UseWPF>
+        <Nulklable>enable</Nulklable>
+        <RootNamespace>Rogero.WpfNavigation</RootNamespace>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Optional" Version="4.0.0" />
+      <PackageReference Include="Serilog" Version="2.10.0" />
+    </ItemGroup>
+
 </Project>
