--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/Rogero.WpfNavigation.WpfTestApp.csproj
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/Rogero.WpfNavigation.WpfTestApp.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <RootNamespace>Rogero.WpfNavigation.WpfTestApp</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -10,12 +10,12 @@
 
 
   <ItemGroup>
-    <PackageReference Include="DevExpress.WindowsDesktop.Mvvm" Version="20.2.4" />
-    <PackageReference Include="DevExpress.WindowsDesktop.Wpf.Grid" Version="20.2.4" />
-    <PackageReference Include="DevExpress.WindowsDesktop.Wpf.LayoutControl" Version="20.2.4" />
-    <PackageReference Include="ReactiveProperty" Version="7.5.1" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="Serilog.Sinks.Seq" Version="4.0.0" />
+    <PackageReference Include="DevExpress.Mvvm" Version="21.2.3" />
+    <PackageReference Include="DevExpress.Wpf.Grid" Version="21.2.3" />
+    <PackageReference Include="DevExpress.Wpf.LayoutControl" Version="21.2.3" />
+    <PackageReference Include="ReactiveProperty" Version="8.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="5.0.1" />
   </ItemGroup>
 
 
